--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@instincthub/reactnative-ui",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A comprehensive React Native UI component library with a robust design system",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest",
