--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@instincthub/reactnative-ui",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A comprehensive React Native UI component library with a robust design system",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -17,8 +17,9 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "prepare": "npm run build",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "link-ui": "rm -rf dist && npm run build && yalc publish",
+    "link-ui-win": "rmdir /s /q dist && npm run build && yalc publish",
+    "update-ui": "rmdir /s /q dist && npm run build && yalc push"
   },
   "keywords": [
     "react-native",
@@ -30,42 +31,38 @@
   "author": "InstinctHub",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=18.2.0",
-    "react-native": ">=0.79.0"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.9",
-    "react-native-gesture-handler": "^2.14.0",
-    "react-native-reanimated": "^3.6.0"
+    "react": ">=19.0.0",
+    "react-native": ">=0.79.0",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "@babel/preset-typescript": "^7.23.0",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
-    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-native": "^8.6.2",
-    "@storybook/react-webpack5": "^8.6.12",
-    "@storybook/test": "^8.6.12",
     "@testing-library/react-native": "^13.2.0",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.7",
+    "@types/hammerjs": "^2.0.46",
     "@types/jest": "^29.5.0",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^22.15.19",
     "@types/react": "^19.1.4",
     "@types/react-native": "^0.72.0",
+    "@types/semver": "^7.7.0",
+    "@types/stack-utils": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.12.0",
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "storybook": "^8.6.12",
     "typescript": "^5.0.0"
   },
   "publishConfig": {
